modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -160,7 +160,7 @@
 @media(max-width: 768px) {
 	
 	#site-navigation #menu-principal-semchilique ul li .sub-menu li a, #site-navigation #menu-principal-semchilique ul li .children li a {
-		padding: 6px 20px;
+		padding: 6px 20px !important;
 		text-align: left;
 	}
 	
