--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -157,12 +157,26 @@
 }
 
 @media(max-width: 1024px) {
+	
 	.header-woo-links-wrap {
 		float: right;
 		padding: 20px 0px 0px 15px;
 		font-size: 11pt;
 		width: 20%;
 	}
+	
+	.woocommerce button.button {
+		padding: 5px 22px;
+	}
+	
+	body .woocommerce .cart .button {
+		margin-left: -5px;
+	}
+	
+	.woocommerce button.button:disabled, .woocommerce button.button:disabled[disabled] {
+		padding: 5px 5px;
+	}
+	    
 }
 
 @media(max-width: 768px) {
