--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -593,23 +593,35 @@ body .woocommerce #payment #place_order, .woocommerce-page #payment #place_order
 	color:#0000; 
 }
 
-.summary .single_add_to_wishlist.button, div.product .woocommerce-price-and-add .single_add_to_wishlist.button {
-	width:70%;
-	padding:14px 0px 14px!important;
-	font-size:110%;
-	border-radius:100px 100px 100px 100px !important;
-	text-align:center;
-	bottom:20px;
-	left:75px;
+/*R*/
+
+.woocommerce div.product form.cart div.quantity {
+    float: left;
+    margin: 0px 4px 20px 0 !important;
+    width: 100% !important;
 }
 
 .woocommerce div.product form.cart .button {
-	width:70%;
-	padding:14px 0px 14px;
-	text-align:center;
-	border-radius: 100px 100px 100px 100px;
-	font-size:110%;
+    width: 28%;
+    padding: 14px 0px;
+    text-align: center;
+    border-radius: 0px;
+    font-size: 110%;
+    margin-left: 0px;
 }
+
+.summary .single_add_to_wishlist.button, div.product .woocommerce-price-and-add .single_add_to_wishlist.button {
+    width: 28%;
+    padding: 14px 0px 14px!important;
+    font-size: 110%;
+    border-radius: 0px !important;
+    text-align: center;
+    bottom: 20px;
+    left: 0px;
+}
+
+/*R*/
+
 
 .woocommerce .yith-wcwl-wishlistexistsbrowse {
 	background:pink;
