modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -231,6 +231,10 @@
 		width: 80px;
 	}
 	
+	.woocommerce div.product form.cart .button {
+    	width: 60%;
+	}
+	
 	.header-search-form-wrap .search-submit, .sm_search_form #searchsubmit {
 		width: 10%;
 		display: inline-block;
