--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -235,6 +235,10 @@
     	width: 60%;
 	}
 	
+	.summary .single_add_to_wishlist.button, div.product .woocommerce-price-and-add .single_add_to_wishlist.button {
+    	width: 60%;
+	}
+	
 	.header-search-form-wrap .search-submit, .sm_search_form #searchsubmit {
 		width: 10%;
 		display: inline-block;
