modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -301,6 +301,10 @@
 		font-size: 11pt;
 		width: 20%;
 	}
+	
+	.woocommerce #shipping-calc #wscp-button, .woocommerce #shipping-calc #wscp-postcode.text {
+		width: 100%;
+	}
 }
 
 
