modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -306,6 +306,9 @@
 		width: 100%;
 	}
 	
+	.woocommerce div.product form.cart .button {
+    	width: 100%;
+	}
 	.summary .single_add_to_wishlist.button, div.product .woocommerce-price-and-add .single_add_to_wishlist.button {
     	width: 100%;
 	}
