--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -307,10 +307,10 @@
 	}
 	
 	.woocommerce div.product form.cart .button {
-    	width: 100%;
+    	width: 100% !important;
 	}
 	.summary .single_add_to_wishlist.button, div.product .woocommerce-price-and-add .single_add_to_wishlist.button {
-    	width: 100%;
+    	width: 100% !important;
 	}
 }
 
