--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -232,7 +232,7 @@
 	}
 	
 	.woocommerce div.product form.cart .button {
-    	width: 60%;
+    	width: 60% !important;
 	}
 	
 	.summary .single_add_to_wishlist.button, div.product .woocommerce-price-and-add .single_add_to_wishlist.button {
