modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -290,6 +290,11 @@
 		margin: 0 auto;
 	}
 	
+	.woocommerce #content div.product div.summary, .woocommerce div.product div.summary, .woocommerce-page #content div.product div.summary, .woocommerce-page div.product div.summary {
+		float: none;
+		width: 90%;
+	}
+	
 	#masthead .custom-logo {
 		width: 55px;
 	}
