--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -158,6 +158,15 @@
      padding-right: 50%;
 }
 
+row-seg {
+	display: flex;
+}
+
+col-seg {
+	width: 50%;
+	display: inline-flex;
+}
+
 
 @media(max-width: 1600px) {
 	
