modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -170,6 +170,10 @@
 }
 
 
+.woocommerce-shipping-calculator {
+	width: 100%;
+}
+
 @media(max-width: 1600px) {
 	
 	.home h2.main-category-list-title.cover-font {
