modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -174,6 +174,10 @@
 	width: 100% !important;
 }
 
+h1.entry-title {
+    margin-left: 1%;
+}
+
 @media(max-width: 1600px) {
 	
 	.home h2.main-category-list-title.cover-font {
