--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -7,6 +7,14 @@
     display: flex;
 }
 
+.primary-menu-phone-wrap ul li {
+    display: inline-block;
+    position: relative;
+    list-style: none;
+    margin: 5px 15px;
+    line-height: 2;
+}
+
 .custom-logo-link img {
 	width: 100px;	
 }
