modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -25,6 +25,11 @@
     display: block;
 }
 
+.primary-menu-phone-wrap ul 
+.primary-menu-phone-wrap > li.menu-item-has-children>a {
+    padding-right: 35px;
+}
+
 .custom-logo-link img {
 	width: 100px;	
 }
