modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -4,7 +4,7 @@
 #masthead .primary-menu-phone-wrap {
     margin: 0 auto;
     transition: all 0.5s;
-    display: flex;
+    display: grid;
 }
 
 .primary-menu-phone-wrap ul li {
