modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -22,7 +22,8 @@
     font-weight: 600;
     text-decoration: none;
     text-transform: initial;
-    display: block;
+	display: inherit;
+    padding-left: 5px;
 }
 
 .primary-menu-phone-wrap ul 
