modified theme `Shopay` version 1.1.1
	Conflict: wp-content/themes/shopay/stylerkr1.css [local version]

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -45,6 +45,10 @@
     top: 35px;
 }
 
+.primary-menu-phone-wrap ul li .sub-menu > .sub-menu {
+    display: contents;
+}
+
 .custom-logo-link img {
 	width: 100px;	
 }
