modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -45,7 +45,7 @@
     top: 35px;
 }
 
-.primary-menu-phone-wrap ul li .sub-menu > .sub-menu {
+.primary-menu-phone-wrap ul li .sub-menu .sub-menu {
     display: contents;
 }
 
