--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -38,7 +38,7 @@
 
 .primary-menu-phone-wrap ul li .sub-menu, 
 .primary-menu-phone-wrap ul li .children {
-    display: block;
+    display: none;
     background: #fff;
     text-align: left;
     position: absolute;
