modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -47,7 +47,7 @@
 }
 
 .primary-menu-phone-wrap ul li .sub-menu .sub-menu {
-    display: contents;
+    /*display: contents; */
 }
 
 .custom-logo-link img {
