--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -50,6 +50,10 @@
     /*display: contents; */
 }
 
+.primary-menu-phone-wrap {
+	display: none;
+}
+
 .custom-logo-link img {
 	width: 100px;	
 }
@@ -291,6 +295,11 @@ h1.entry-title {
     	display: block !important;
 		text-align: left;
 	}
+	
+	.primary-menu-phone-wrap {
+		display: grid;
+	}
+
 	
 	h2.main-category-list-title.cover-font {
 		padding: 10px 0px;
