--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -771,7 +771,7 @@ body .woocommerce #payment #place_order, .woocommerce-page #payment #place_order
 }
 
 ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTemplate .spinner, .woobewoo-filter-loader.spinner {
-    background: url('https://static.wixstatic.com/media/399425_4c36936a860f498088a8c1972d16f9da~mv2.gif') !important;
+    background: url("https://static.wixstatic.com/media/399425_4c36936a860f498088a8c1972d16f9da~mv2.gif") !important;
 }
 
 /*FOOTER*/
