--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1100,6 +1100,11 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 
 @media (max-width: 575px) 
 {
+	#rowFiltro {
+		float: left;
+		margin-left: -25px;
+		margin-bottom: 15px;
+	}
 	
 	.header-site-info-wrap i {
 		position: relative;
