--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1051,6 +1051,11 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 		margin-bottom: 15px;
 	}
 	
+	#filtroPhone {
+		padding: 13px;
+    	font-size: 12pt;
+	}
+	
 	#secondary, .home.blog #secondary {
 		
 		float: right;
