--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -812,6 +812,10 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 		left: 91%;
 	}
 
+	#rowFiltro {
+		display: none;
+	}
+
 /*FOOTER*/
 
 .footer-widget-wrapper {
@@ -1046,6 +1050,7 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 @media (max-width: 768px) 
 {
 	#rowFiltro {
+		display: block;
 		float: left;
 		margin-left: -25px;
 		margin-bottom: 15px;
