--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -816,6 +816,12 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 		display: none;
 	}
 
+	#closeFiltro {
+		float: right;
+    	font-size: 20pt;
+		display: none;
+	}
+
 /*FOOTER*/
 
 .footer-widget-wrapper {
