--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1070,11 +1070,12 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 	#secondary, .home.blog #secondary {
 		z-index: 1000;
 		float: right;
-		width: 100%;
-		top: 210px;
+		width: 70%;
+		top: 0px;
 		position: absolute !important;
 		background: #fff;
 		display: none;
+		left: 0;
 	}
 	
 	#closeFiltro {
