--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1076,6 +1076,7 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 		background: #fff;
 		display: none;
 		left: 0;
+		height: 100%
 	}
 	
 	#closeFiltro {
