--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1079,6 +1079,10 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 		height: 100%
 	}
 	
+	#woocommerce_layered_nav_filters-1 {
+		display: none;
+	}
+	
 	#closeFiltro {
 		display: none;
 	}
