--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1083,8 +1083,9 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 		display: none;
 	}
 	
-	#secondary .widget-area .widget {
+	#secondary .widget {
 		margin: 0 0 0px;
+		background: #bbb6b6eb;
 	}
 	
 	#closeFiltro {
