--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1087,6 +1087,7 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 	#secondary .widget {
 		margin: 0 0 0px;
 		background:#ececece0;
+		width: 70% !important;
 	}
 	
 	#closeFiltro {
