--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1072,7 +1072,7 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 		float: right;
 		width: 70%;
 		top: 0px;
-		position: absolute !important;
+		position: fixed !important;
 		background: #fff;
 		display: none;
 		left: 0;
