--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1080,14 +1080,19 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 		background: #424242e0;
 	}
 	
+	#secondary .theiaStickySidebar {
+		height: 100%;
+		width: 70%;
+		background:#ececece0;
+	}
+	
 	#woocommerce_layered_nav_filters-1 {
 		display: none;
 	}
 	
 	#secondary .widget {
 		margin: 0 0 0px;
-		background:#ececece0;
-		width: 70% !important;
+		width: 100% !important;
 	}
 	
 	#closeFiltro {
