--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1093,6 +1093,7 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 	#secondary .widget {
 		margin: 0 0 0px;
 		width: 100% !important;
+		background:#ececece0;
 	}
 	
 	#closeFiltro {
