--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1058,13 +1058,14 @@ ul.products .spinner, .la-spinner, .wpfIconPreview .spinner, .wpfLoaderIconTempl
 	#rowFiltro {
 		display: block;
 		float: left;
-		margin-left: -25px;
+		margin-left: -40px;
 		margin-bottom: 15px;
 	}
 	
 	#filtroPhone {
 		padding: 13px;
     	font-size: 12pt;
+		width: 100px;
 	}
 	
 	#secondary, .home.blog #secondary {
